[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/MineActionIndicatorIcon.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/AttackActionIndicatorIcon.png" type="Texture" id=2]
[ext_resource path="res://game/actionIndication/ActionHandler.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/ActionIndicator.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/cross.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "action"
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.9, 1.2 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 0.8 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.1, 0.8 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Container:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -8 ), Vector2( 0, -8 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "appear"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Container:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 0.9, 1.3 ), Vector2( 1.2, 0.9 ), Vector2( 1, 1 ) ]
}

[node name="ActionHandler" type="Node2D"]
z_index = 10
script = ExtResource( 3 )

[node name="Container" type="Node2D" parent="."]
scale = Vector2( 1e-05, 1e-05 )

[node name="ActionIndicator" type="Sprite" parent="Container"]
position = Vector2( -16, -32 )
texture = ExtResource( 4 )
centered = false

[node name="AttackActionIndicatorIcon" type="Sprite" parent="Container"]
visible = false
position = Vector2( -1, -16 )
texture = ExtResource( 2 )

[node name="MineActionIndicatorIcon" type="Sprite" parent="Container"]
visible = false
position = Vector2( -1, -16 )
texture = ExtResource( 1 )

[node name="CancelActionIndicatorIcon" type="Sprite" parent="Container"]
visible = false
position = Vector2( -1, -18 )
texture = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/action = SubResource( 3 )
anims/appear = SubResource( 2 )
